# temperature-and-humidity-regulator

./: .gitignore  README.md  code.ino
code/: README.md  code.ino
code/AVR_Baremetal/: CMakeLists.txt  README.md
code/AVR_Baremetal/include/: dht22.h  keypad.h  lcd.h  main.h  pin.h  strfmt.h  tasks.h  timebase.h  twi.h  usart.h
code/AVR_Baremetal/src/: dht22.c  keypad.c  lcd.c  main.c  pin.c  strfmt.c  tasks.c  timebase.c  twi.c  usart.c
code/Arduino_IDE/code/: code.ino
documentation/: .documentation.tex  documentation.tex  dokumentacija.tex
documentation/step_response/: step_response.py  step_response.txt  step_response_figure.m  step_response_figure.py
documentation/tests/code_test_dht/: code_test_dht.ino
documentation/tests/humidity/: test1.txt  test2.txt  test3.txt  test4.txt
documentation/tests/temperature/: test1.txt  test2.txt  testB1.txt  testB2.txt
